--- a/resources/sass/my-style.scss
+++ b/resources/sass/my-style.scss
@@ -123,3 +123,28 @@ table td a{
 #footer-icon a:hover {
     text-decoration: none;
 }
+
+
+// Untuk membuat Hover  di halaman jurusan
+
+.card .btn-action {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+}
+
+.card .btn-action {
+    opacity: 0;
+}
+
+.card:hover .btn-action {
+    opacity: 0.7;
+}
+
+.card .btn-action:hover {
+    opacity: 1.0 !important;
+}
+
+tr:target {
+    background-color: lightyellow !important;
+}
